Update input placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>Giải pháp tiếp thị tất cả liên kết trong một để tăng người theo dõi, lượt truy cập và doanh số bán hàng.</p>
       <div class="input-box">
         <span>linkbio.cc/</span>
-        <input placeholder="duckubrbr" />
+        <input placeholder="Tên-của-bạn" />
         <a class="btn" href="#">Bắt đầu</a>
       </div>
     </div>
