--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3673533499790688"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Link in Bio – Demo</title>
@@ -42,7 +44,7 @@
       <p>Giải pháp tiếp thị tất cả liên kết trong một để tăng người theo dõi, lượt truy cập và doanh số bán hàng.</p>
       <div class="input-box">
         <span>linkbio.cc/</span>
-        <input placeholder="Tên-của-bạn" />
+        <input placeholder="Tên của bạn" />
         <a class="btn" href="#">Bắt đầu</a>
       </div>
     </div>
