Update logo text and button links in index.html

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </head>
 <body>
   <header>
-    <div class="logo">🔗 Smth bro</div>
+    <div class="logo">🔗 Linkbio Demo</div>
     <nav>
       <a href="#">Giải pháp</a>
       <a href="#">Khám phá</a>
       <a href="#">Định giá</a>
       <a href="#">Cứu giúp</a>
-      <a href="#" class="btn">Bắt đầu</a>
+      <a href="https://www.linkbio.co/signup/?utm_source=linkbio&utm_medium=basttool" target="_blank" class="btn">Bắt đầu</a>
     </nav>
   </header>
 
@@ -44,8 +44,8 @@
       <p>Giải pháp tiếp thị tất cả liên kết trong một để tăng người theo dõi, lượt truy cập và doanh số bán hàng.</p>
       <div class="input-box">
         <span>linkbio.cc/</span>
-        <input placeholder="Tên của bạn" />
-        <a class="btn" href="#">Bắt đầu</a>
+        <input placeholder="ten-cua-ban" />
+        <a class="btn" href="https://www.linkbio.co/signup/?utm_source=linkbio&utm_medium=basttool" target="_blank">Bắt đầu</a>
       </div>
     </div>
     <div class="phone">
