Modify screen section in index.html
Updated the screen section with an image and removed text.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
       </div>
     </div>
     <div class="phone">
-      <div class="screen">
-        <h3>Choose us</h3>
-        <p style="font-size:13px;opacity:.8">Music is a unique art</p>
-        <div class="card">🎵 Pop music album – $200</div>
+      <div class="screen" style="padding:0; overflow:hidden;">
+        <img src="header-thm0.png" alt="Link bio preview" style="width:100%; display:block; border-radius:24px;" />
+      </div>
         <div class="card">🎷 Art songs – $265</div>
         <div class="card">🎤 Live show – $88</div>
       </div>
